
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int num; int jmpaddr; char* name; } ;


 int exit (int ) ;
 int printf (char*,...) ;
 TYPE_1__* target ;

void
usage(char *prog)
{
 int i;

 printf("%s <host> <netbios name> <target> <bindport> [connectback IP] [options]\n\n", prog);
 printf("Targets:\n");
 for (i = 0; i < 2; i++)
  printf("	%d [0x%.8x]: %s\n", target[i].num,
target[i].jmpaddr, target[i].name);
 printf("\nOptions:\n\t-f: Netbios name fingerprinting\n");
 exit(0);

}
